# StorageMCP

./: AGENTS.md  README.md  main.py  package-lock.json  pyproject.toml  test_weather.py  weather.py
mcp_server/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_async.py  test_imports.py  test_mock.py
mcp_server/src/: __init__.py  config.py  main.py  server.py
mcp_server/src/endpoints/: alerts.py  forecast.py  health.py  prompts.py  tools.py
mcp_server/src/models/: responses.py
mcp_server/tests/: __init__.py  test_server.py
