[tool.poetry]
name = "mcp-server"
version = "0.1.0"
description = "MCP server for weather forecasting"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.29.0"
fastapi = "^0.111.0"
pydantic = "^2.8.0"
requests = "^2.31.0"
mcp = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "fastapi>=0.134.0",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.41.0",
]
